--- a/src/main/webapp/views/404.html
+++ b/src/main/webapp/views/404.html
@@ -1,5 +1,5 @@
-<!DOCTYPE jsp>
-<jsp>
+<!DOCTYPE html>
+<html>
 <head>
     <title>Computer Database</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
 <body>
     <header class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="dashboard.jsp"> Application - Computer Database </a>
+            <a class="navbar-brand" href="dashboard.html"> Application - Computer Database </a>
         </div>
     </header>
 
@@ -26,8 +26,8 @@
     </section>
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/dashboard.js"></script>
-
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/dashboard.js"></script>
+	
 </body>
-</jsp>
+</html>
